--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
   color: white;
   text-transform: uppercase;
 
-  /* backface-visibility: hidden; */
+  backface-visibility: hidden; /* applying to parent will fix any animtion issues */
   margin-bottom: 60px;
 }
 
@@ -73,7 +73,9 @@ body {
   animation-duration: 1s;
   animation-timing-function: ease-out;
 
-  /*
+  /* 
+    additonal animation properties 
+
     animation-delay: 3s
     animation-iteration-count: 3;
     animation-timing-function: ease-in
@@ -117,6 +119,17 @@ body {
   }
 }
 
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -125,6 +138,7 @@ body {
   display: inline-block;
   border-radius: 100px;
   transition: all 0.2s;
+  position: relative;
 }
 
 .btn:hover {
@@ -140,4 +154,34 @@ body {
 .btn-white {
   background-color: white;
   color: #777;
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  /* pseudo elements require to define content & display */
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.btn-white::after {
+  background-color: white;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-animated {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  /* animation name, duration, timing-function, delay */
+  animation-fill-mode: backwards;
+  /* apply the animations before the animation starts */
 }
