--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -9,22 +10,33 @@
     transition: all 0.2s;
     position: relative;
     font-size: $default-font-size;
+
+    //Change for the <button> element
+    border: none;
+    cursor: pointer;
   }
+
   &:hover {
     transform: translateY(-3px);
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+
     &::after {
       transform: scaleX(1.4) scaleY(1.6);
       opacity: 0;
     }
   }
-  &:active {
+
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-1px);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
+
   &--white {
     background-color: $color-white;
     color: $color-grey-dark;
+
     &::after {
       background-color: $color-white;
     }
@@ -33,14 +45,15 @@
   &--green {
     background-color: $color-primary;
     color: $color-white;
+
     &::after {
       background-color: $color-primary;
     }
   }
+
   &::after {
     content: "";
     display: inline-block;
-    /* pseudo elements require to define content & display */
     height: 100%;
     width: 100%;
     border-radius: 10rem;
@@ -53,9 +66,7 @@
 
   &--animated {
     animation: moveInBottom 0.5s ease-out 0.75s;
-    /* animation name, duration, timing-function, delay */
     animation-fill-mode: backwards;
-    /* apply the animations before the animation starts */
   }
 }
 
@@ -70,12 +81,14 @@
     padding: 3px;
     transition: all 0.2s;
   }
+
   &:hover {
     background-color: $color-primary;
     color: $color-white;
     box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
     transform: translateY(-2px);
   }
+
   &:active {
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
     transform: translateY(0);
