--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,7 +1,7 @@
 .card {
-  // Functionality
-  -moz-perspective: 150rem;
+  // FUNCTIONALITY
   perspective: 150rem;
+  -moz-perspective: 150rem;
   position: relative;
   height: 52rem;
 
@@ -12,6 +12,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     border-radius: 3px;
     overflow: hidden;
@@ -20,6 +21,7 @@
     &--front {
       background-color: $color-white;
     }
+
     &--back {
       transform: rotateY(180deg);
 
@@ -30,6 +32,7 @@
           $color-secondary-dark
         );
       }
+
       &-2 {
         background-image: linear-gradient(
           to right bottom,
@@ -37,6 +40,7 @@
           $color-primary-dark
         );
       }
+
       &-3 {
         background-image: linear-gradient(
           to right bottom,
@@ -48,19 +52,23 @@
   }
 
   &:hover &__side--front {
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
   }
+
   &:hover &__side--back {
     transform: rotateY(0);
   }
 
-  // Front Side Styling
+  // FRONT SIDE STYLING
   &__picture {
     background-size: cover;
     height: 23rem;
     background-blend-mode: color;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+
     &--1 {
       background-image: linear-gradient(
           to right bottom,
@@ -69,6 +77,7 @@
         ),
         url(../img/nat-5.jpg);
     }
+
     &--2 {
       background-image: linear-gradient(
           to right bottom,
@@ -77,6 +86,7 @@
         ),
         url(../img/nat-6.jpg);
     }
+
     &--3 {
       background-image: linear-gradient(
           to right bottom,
@@ -103,6 +113,7 @@
     padding: 1rem 1.5rem;
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone;
+
     &--1 {
       background-image: linear-gradient(
         to right bottom,
@@ -110,6 +121,7 @@
         rgba($color-secondary-dark, 0.85)
       );
     }
+
     &--2 {
       background-image: linear-gradient(
         to right bottom,
@@ -117,6 +129,7 @@
         rgba($color-primary-dark, 0.85)
       );
     }
+
     &--3 {
       background-image: linear-gradient(
         to right bottom,
@@ -125,8 +138,10 @@
       );
     }
   }
+
   &__details {
     padding: 3rem;
+
     ul {
       list-style: none;
       width: 80%;
@@ -144,23 +159,73 @@
     }
   }
 
-  // Back side Styling
+  // FRONT SIDE STYLING
   &__cta {
-    @include absCenter;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 90%;
     text-align: center;
   }
+
   &__price-box {
     text-align: center;
     color: $color-white;
     margin-bottom: 8rem;
   }
+
   &__price-only {
     font-size: 1.4rem;
     text-transform: uppercase;
   }
+
   &__price-value {
     font-size: 6rem;
     font-weight: 100;
+  }
+
+  @include respond(tab-port) {
+    height: auto;
+    border-radius: 3px;
+    background-color: $color-white;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+
+    &__side {
+      height: auto;
+      position: relative;
+      box-shadow: none;
+
+      &--back {
+        transform: rotateY(0);
+        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
+      }
+    }
+
+    &:hover &__side--front {
+      transform: rotateY(0);
+    }
+
+    &__details {
+      padding: 1rem 3rem;
+    }
+
+    // FRONT SIDE STYLING
+    &__cta {
+      position: relative;
+      top: 0%;
+      left: 0;
+      transform: translate(0);
+      width: 100%;
+      padding: 7rem 4rem 4rem 4rem;
+    }
+
+    &__price-box {
+      margin-bottom: 3rem;
+    }
+
+    &__price-value {
+      font-size: 4rem;
+    }
   }
 }
