--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,6 +10,10 @@
   visibility: hidden;
   transition: all 0.3s;
 
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  background-color: rgba($color-black, 0.3);
+
   &__content {
     @include absCenter;
 
@@ -17,16 +21,26 @@
     background-color: $color-white;
     box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
     border-radius: 3px;
-    display: table;
+    // display: table;
     overflow: hidden;
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.25);
     transition: all 0.5s 0.2s;
+
+    @include respond(tab-port) {
+      text-align: center;
+    }
   }
 
   &__left {
     width: 33.333333%;
     display: table-cell;
+
+    @include respond(tab-port) {
+      width: auto;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
   &__right {
@@ -34,19 +48,35 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-port) {
+      width: auto;
+      display: block;
+      padding: 1.5rem 2.5rem;
+    }
   }
 
   &__img {
     display: block;
     width: 100%;
+    height: auto;
   }
 
   &__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
+
+    -moz-column-count: 2;
+    -moz-column-gap: 4rem; //1em = 14px;
+    -moz-column-rule: 1px solid $color-grey-light-2;
+
     column-count: 2;
-    column-gap: 4rem;
+    column-gap: 4rem; //1em = 14px;
     column-rule: 1px solid $color-grey-light-2;
+
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto;
     hyphens: auto;
   }
 
