--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -9,31 +9,43 @@
   font-size: $default-font-size;
   transform: skewX(-12deg);
 
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+
+  @include respond(phone) {
+    transform: skewX(0);
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
     float: left;
-
-    // This actualy creates a circle like shape
-    -webkit-shape-outside: circle(50% at 50% 50%);
-    shape-outside: circle(50% at 50% 50%);
-    // This shows the circle like shape
-    -webkit-clip-path: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%);
-    // The best way to move around element that float is to use transform no margins or padding
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0);
+    }
   }
 
   &__img {
-    // Given a height 100% it referce the 100% of the parent in this case is 15rem
     height: 100%;
     transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
     transition: all 0.5s;
   }
 
   &__text {
     transform: skewX(12deg);
+
+    @include respond(phone) {
+      transform: skewX(0);
+    }
   }
 
   &__caption {
@@ -47,6 +59,7 @@
     text-align: center;
     opacity: 0;
     transition: all 0.5s;
+    backface-visibility: hidden;
   }
 
   &:hover &__caption {
