--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,9 +4,17 @@
   font-size: 1.4rem;
   color: $color-grey-light-1;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -17,13 +25,18 @@
   &__navigation {
     border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
-    // using inline block will put the text perfect under the line
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
     list-style: none;
   }
+
   &__item {
     display: inline-block;
 
@@ -31,6 +44,7 @@
       margin-right: 1.5rem;
     }
   }
+
   &__link {
     &:link,
     &:visited {
@@ -41,6 +55,7 @@
       display: inline-block;
       transition: all 0.2s;
     }
+
     &:hover,
     &:active {
       color: $color-primary;
@@ -54,5 +69,10 @@
     padding-top: 2rem;
     width: 80%;
     float: right;
+
+    @include respond(tab-port) {
+      width: 100%;
+      float: none;
+    }
   }
 }
